--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0",
     "supervisor": "^0.12.0"
   }
 }
